# modorganizer-preview_base

./: .git-blame-ignore-revs  CMakeLists.txt  appveyor.yml  vcpkg.json
.github/workflows/: build.yml  linting.yml
src/: CMakeLists.txt  preview_base_en.ts  previewbase.cpp  previewbase.h
